# overlayagent-opencode

./: .gitignore  README-oc.md  README.md  ai-trends.md  install-autostart.ps1  install-autostart.sh  install-shim.ps1  install-shim.sh  oc.cmd  oc.ps1  oc.sh  opencode_monitor.py  profile-snippet.ps1  profile-snippet.zsh  start-overlay.bat  start-overlay.ps1  start-overlay.sh
agent-overlay/: README.md  package-lock.json  package.json
agent-overlay/src/: app.css  app.html
agent-overlay/src-tauri/: Cargo.toml  tauri.conf.json
agent-overlay/src-tauri/capabilities/: default.json
agent-overlay/src-tauri/src/: event_server.rs  lib.rs  main.rs
agent-overlay/src/lib/: types.ts
agent-overlay/src/lib/bridge/: opencode.ts
agent-overlay/src/lib/components/: ControlPanel.svelte  DragHandle.svelte  Overlay.svelte  ParticleCanvas.svelte  SettingsPanel.svelte  TokenCounter.svelte
agent-overlay/src/lib/particles/: ParticleSystem.ts  config.ts  intensity.ts  presets.ts  types.ts
agent-overlay/src/lib/stores/: generation.svelte.ts
agent-overlay/src/lib/window/: opacity.ts
agent-overlay/src/routes/: +layout.svelte  +layout.ts  +page.svelte
docs/: content.md  guide.html  index.html
docs/assets/css/: site.css
docs/assets/js/: nav.js
opencode_bridge/: __init__.py  __main__.py  config.py  daemon.py  db_tokens.py  detect.py  emit.py  runner.py
shim/: opencode  opencode.cmd  opencode.ps1
tests/: test_db_tokens.py  test_detect.py  test_log_claim.py  test_session_keys.py
