[package]
name = "agent-overlay"
version = "0.1.0"
description = "Floating Grok generation overlay with particle animation"
authors = ["you"]
edition = "2021"

[lib]
name = "agent_overlay_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["macos-private-api", "tray-icon"] }
tauri-plugin-single-instance = "2"
tauri-plugin-autostart = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tiny_http = "0.12"
